css tweak to fix cutoff icon (fixes #138))

--- a/src/styles/topics/_controlbar.scss
+++ b/src/styles/topics/_controlbar.scss
@@ -13,6 +13,7 @@
     .fav-toggle-button {
       display: inline-block;
       margin-left: 13px;
+      margin-right: 13px;
       float: left;
     }
 
@@ -21,7 +22,6 @@
         vertical-align:middle;
         padding-bottom: 0px;
         .app-icon-settings {
-          margin-left: 13px;
         }
       }
     }
